# ktrack

./: .gitignore  .prettierrc  CRDT.md  README.md  TODO  getfavorites  gethistory  package-lock.json  package.json  push.sh  push_staging.sh  restart_ktrack.sh  restart_staging_ktrack.sh  start.sh  start_staging.sh  svelte.config.js  update_local.sh  upload.py  vite.config.ts
backend/: .gitignore  Cargo.toml
backend/src/: db.rs  handlers.rs  main.rs  models.rs  utils.rs
data/: Food Composition.csv  Makefile  McCance_Widdowsons_Composition_of_Foods_Integrated_Dataset_2019.csv  convert.py  create_index.js  schema.txt  sources.txt
data/FoodData_Central_csv_2019-12-17/: food.csv  food_nutrient.csv  food_portion.csv  measure_unit.csv
src/: app.css  app.html  server.js  service-worker.js  template.html
src/components/: Nav.svelte
src/routes/: +error.svelte  +layout.svelte  +page.svelte  _crdt.js  _elasticlunr.js  _food.svelte  _layout.svelte  _post.js  _stores.js  _stores_common.js  _stores_test_adapter.js  _test_crdt.js  _test_stores.js  _test_svelte_mocks.js  _util.js  _util_common.js  _util_test_adapter.js  favorites.js  favorites.svelte  history.js  history.svelte  index.svelte  profile.js  search.svelte  today.js
src/routes/about/: +page.svelte  credits.svelte  index.svelte  what-is-ktrack.svelte
src/routes/api/: _dbs.js  _post.js
src/routes/favorites/: +page.svelte  +server.js
src/routes/history/: +page.svelte  +server.js
src/routes/profile/: +server.js
src/routes/search/: +page.svelte
static/: global.css  manifest.json
(+9 files in other folders)
