[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
rocksdb = "0.21" # Or the latest compatible version
tower-http = { version = "0.5", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] } # Add this line
